# gapzilla

./: .gitignore  README.md  config.yaml  documentation.html  env.yaml  examples.ipynb  gapzilla.py  pyproject.toml  requirements.txt  setup.py  tsv_template.tsv
conda-build/: channeldata.json  index.html
conda-build/linux-64/: gapzilla-1.0.1-py312_0.tar.bz2  index.html  repodata.json  repodata_from_packages.json.bz2
conda-build/linux-64/.cache/: cache.db
conda-build/noarch/: index.html
conda-build/noarch/.cache/: cache.db
conda-recipe/: meta.yaml
docs/: gapzilla.html  index.html  search.js
docs/gapzilla/: config.html  feature_processing.html  file_processing.html  gbk_processing.html  hairpin_processing.html  insertion_processing.html  interval_processing.html  main.html  models.html  sequence_processing.html  utils.html
gapzilla/: __init__.py  config.py  feature_analysis.py  feature_processing.py  file_handling.py  gbk_processing.py  hairpin_processing.py  insertion_finder.py  insertion_processing.py  interval_processing.py  main.py  models.py  sequence_processing.py  utils.py
